[package]
name = "rust_project"
version = "0.1.0"
authors = ["PRAKASH BHATT <prakashsagwara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rayon = "1.5"